--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
   <head>
     <title>My Website</title>
+    <!-- Link to bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
