--- a/form.html
+++ b/form.html
@@ -33,22 +33,40 @@
 			<label for="adult">26-55</label>
 			<input type="radio" id="senior" name="age" value="senior">
 			<label for="senior">Más de 56</label><br><br>
+            <!-- checked -->
+
+            <!-- Insertar un input type range that shows the value-->
+            <label for="range">Rango:</label>
+            <input type="range" id="range" name="range" min="0" max="100" value="50"><br><br>
+            <!--
+                function updateTextInput(val) {
+                document.getElementById('textInput').value=val; 
+                }
+
+                <input type="range" name="rangeInput" min="0" max="100" onchange="updateTextInput(this.value);">
+                <input type="text" id="textInput" value="">
+            -->
+
+            <!--Insertar un checkbox-->
+            <label for="terms">Acepto términos y condiciones:</label>
+            <input type="checkbox" id="terms" name="terms" required><br><br>
 			
 			<label for="country">País:</label>
 			<select id="country" name="country">
+                <!-- multiple size -->
                 <option value="co">Colombia</option>
+                <!-- selected -->
 				<option value="br">Brasil</option>
-				<option value="ca">Canada</option>
+				<option value="ca" selected>Canada</option>
 				<option value="mx">Mexico</option>
 				<option value="otro">Otro</option>
 			</select><br><br>
 			
 			<label for="bio">Bio:</label>
 			<textarea id="bio" name="bio"></textarea><br><br>
+			<!-- cols="20" rows="5"-->
 
-            <!--Insertar un checkbox-->
-            <label for="terms">Acepto términos y condiciones:</label>
-            <input type="checkbox" id="terms" name="terms" required><br><br>
+            
 		</fieldset>
 		
 		<fieldset>
@@ -68,9 +86,13 @@
 		
 		<input type="hidden" name="hidden_field" value="This is a hidden field.">
 		
-		<button type="button" onclick="alert('Button clicked!')">Button</button>
+		<button type="button" onclick="console.log('Click en el botón a las'+ new Date().toLocaleTimeString())">Button</button>
+		<button type="button" id="buttonListener">Listener</button>
 		<button type="submit">Submit</button>
+		<input type="submit" value="Submit">
 		<button type="reset">Reset</button>
+		<!-- se puede agregar html en el contenido de button-->
+		<script src="receptorEventos.js"></script>
 	</form>
 </body>
 </html>
